--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ subjects:
 - !lcsh 'Heroes -- Juvenile fiction'
 - !lcsh 'Conduct of life -- Juvenile fiction'
 - !lcsh 'Murder -- Juvenile fiction'
+- GITenberg
 title: 'Gwen Wynn: A Romance of the Wye'
 url: http://www.gutenberg.org/ebooks/35784
